Closed Bug 118794 Opened 23 years ago Closed 23 years ago

pixel frame error in nsBulletFrame.cpp

Categories

(Core :: Layout, defect)

x86
Windows 98
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla0.9.8

People

(Reporter: bernd_mozilla, Assigned: attinasi)

Details

Attachments

(1 file)

the coordinates should be aligned to integer pixel bounds.
Attached patch patchSplinter Review
Comment on attachment 63991 [details] [diff] [review]
patch

r=mkaply

Based on similar looking code in nsBulletFrame.

Make a note - more twips/pixels crap.
Attachment #63991 - Flags: review+
Comment on attachment 63991 [details] [diff] [review]
patch

sr=attinasi - how I love TWIPS
Attachment #63991 - Flags: superreview+
fixed
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla0.9.8
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: