bug 118794 remove pxiel frame error r=mkaply sr=attinasi bug 110596 adding form frames to debug reflow - part2 r=karnaze sr=attinasi